--- a/Genie/Templates/Infrastructure/Repository.tt
+++ b/Genie/Templates/Infrastructure/Repository.tt
@@ -10,14 +10,14 @@ using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
-    public abstract class Repository<T,Q> : IRepository<T>
+    public abstract class Repository<T> : IRepository<T>
         where T : BaseModel
     {
         public IDbConnection Conn { get; }
         public IDapperContext Context { get;}
-        public UnitOfWork UnitOfWork { get;}
+        public IUnitOfWork UnitOfWork { get;}
 
-        public Repository(IDapperContext context, UnitOfWork unitOfWork)
+        public Repository(IDapperContext context, IUnitOfWork unitOfWork)
         {
             Context = context;
             Conn = Context.Connection;
@@ -81,6 +81,19 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         public virtual IEnumerable<T> GetBy(object where = null, object order = null, int? pageSize = null, int? page = null, IDbTransaction transaction = null, int? commandTimeout = null)
         {
             var items = Conn.GetBy<T>(where: where, order: order, pageSize: pageSize, page: page , transaction: transaction, commandTimeout: commandTimeout).ToList();
+
+            foreach (var item in items)
+            {
+                item.DatabaseUnitOfWork = UnitOfWork;
+                item.DatabaseModelStatus = ModelStatus.Retrieved;
+            }
+            return items;
+        }
+
+
+        internal virtual IEnumerable<T> Get(string targetName, Queue<string> where, Queue<string> order, int? pageSize = null, int? page = null, int? limit = null, IDbTransaction transaction = null)
+        {
+            var items = Conn.Get<T>(targetName, where, order, pageSize, page, limit, transaction).ToList();
 
             foreach (var item in items)
             {
