--- a/Genie/Templates/Infrastructure/RepositoryFactory.tt
+++ b/Genie/Templates/Infrastructure/RepositoryFactory.tt
@@ -9,12 +9,14 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
     {
         public IRepository<T> CreateRepository<T>(IDapperContext context, UnitOfWork unit) where T : BaseModel
         {
-            return  new Repository<T>(context, unit);
+            return null;
+            // return  new Repository<T>(context, unit);
         }
 
         public IReadOnlyRepository<T> CreateReadOnlyRepository<T>(IDapperContext context) where T : class
         {
-            return  new ReadOnlyRepository<T>(context);
+            return null;
+            // return  new ReadOnlyRepository<T>(context);
         }
     }
 }
