--- a/Genie/Templates/Infrastructure/Models/View.tt
+++ b/Genie/Templates/Infrastructure/Models/View.tt
@@ -7,76 +7,89 @@ using Indico.DataAccess.Dapper;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Repositories;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters;
 
+<#var entity = _view;#>
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 {
-    [Table("[dbo].[<#=_view.Name#>]")]
-    public class <#=_view.Name#> 
+    [Table("[dbo].[<#=entity.Name#>]")]
+    public class <#=entity.Name#> 
     {
-<#foreach(var atd in _view.Attributes){#>
+<#foreach(var atd in entity.Attributes){#>
 		public <#=atd.DataType#> <#=atd.Name#> { get; set; } 
 <#}#>
     }
 
-    public class <#=_view.Name#>QueryContext 
+    public class <#=entity.Name#>QueryContext 
 	{
-		private <#=_view.Name#>FilterContext _where; 
-	    private <#=_view.Name#>OrderContext _order;
-		private readonly <#=_view.Name#>Repository _repo;
-		internal <#=_view.Name#>QueryContext(<#=_view.Name#>Repository repo) { _repo = repo; }
-		public <#=_view.Name#>FilterContext Where { get { return _where ?? (_where = new <#=_view.Name#>FilterContext(_repo, this)); }}
-        public <#=_view.Name#>OrderContext OrderBy { get { return _order ?? (_order = new <#=_view.Name#>OrderContext(_repo, this)); } }
+		private <#=entity.Name#>FilterContext _where; 
+	    private <#=entity.Name#>OrderContext _order;
+		private readonly <#=entity.Name#>Repository _repo;
+		internal <#=entity.Name#>QueryContext(<#=entity.Name#>Repository repo) { _repo = repo; }
+		public <#=entity.Name#>FilterContext Where { get { return _where ?? (_where = new <#=entity.Name#>FilterContext(this)); }}
+        public <#=entity.Name#>OrderContext OrderBy { get { return _order ?? (_order = new <#=entity.Name#>OrderContext(this)); } }
         private int? _page;
 	    private int? _pageSize;
 	    private int? _limit;
+		private int? _skip;
+		private int? _take;
 
-        public <#=_view.Name#>QueryContext Page(int pageSize, int page)
+        public <#=entity.Name#>QueryContext Page(int pageSize, int page)
         {
             _page = page;
             _pageSize = pageSize;
             return this;
         }
 
-        public <#=_view.Name#>QueryContext Top(int limit)
+        public <#=entity.Name#>QueryContext Top(int limit)
         {
             _limit = limit;
             return this;
         }
 
-	    public IEnumerable<<#=_view.Name#>> Query(IDbTransaction transaction = null)
+		public <#=entity.Name#>QueryContext Skip(int skip)
 	    {
-	        return _repo.Get("[dbo].[<#=_view.Name#>]", _where == null ? null : _where.GetFilterExpressions(), _order == null ? null : _order.GetOrderExpressions(), _pageSize, _page, _limit, transaction);
+	        _skip = skip;
+	        return this;
+	    }
+
+	    public <#=entity.Name#>QueryContext Take(int take)
+	    {
+	        _take = take;
+	        return this;
+	    }
+
+	    public IEnumerable<<#=entity.Name#>> Query(IDbTransaction transaction = null)
+	    {
+	        return _repo.Get("[dbo].[<#=entity.Name#>]", _where?.GetFilterExpressions(), _order?.GetOrderExpressions(), _pageSize, _page, _limit, _skip, _take, transaction);
 	    }
 	}
 
-	public class <#=_view.Name#>FilterContext : BaseFilterContext
+	public class <#=entity.Name#>FilterContext : BaseFilterContext
 	{
-		private <#=_view.Name#>Repository _repo;
-		private readonly <#=_view.Name#>QueryContext  _queryContext;
-		internal <#=_view.Name#>FilterContext(<#=_view.Name#>Repository repo, <#=_view.Name#>QueryContext context) { _repo = repo; _queryContext = context; }
+		private readonly <#=entity.Name#>QueryContext  _queryContext;
+		internal <#=entity.Name#>FilterContext(<#=entity.Name#>QueryContext context) { _queryContext = context; }
         
-<#foreach(var atd in _view.Attributes){#>
+<#foreach(var atd in entity.Attributes){#>
 <#if(atd.DataType == "string"){#>
-		private StringFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext> <#=atd.FieldName#>;
-		public StringFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new StringFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
+		private StringFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext> <#=atd.FieldName#>;
+		public StringFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new StringFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
 <#} else if(atd.DataType == "int" || atd.DataType == "int?" || atd.DataType == "double" || atd.DataType == "double?" || atd.DataType == "decimal" || atd.DataType == "decimal?" || atd.DataType == "long" || atd.DataType == "long?" ){#>
-		private NumberFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext> <#=atd.FieldName#>;
-		public NumberFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new NumberFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
+		private NumberFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext> <#=atd.FieldName#>;
+		public NumberFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new NumberFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
 <#}else if(atd.DataType == "DateTime" || atd.DataType == "DateTime?"){#>
-    	private DateFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext> <#=atd.FieldName#>;
-		public DateFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new DateFilter<<#=_view.Name#>FilterContext,<#=_view.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
+    	private DateFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext> <#=atd.FieldName#>;
+		public DateFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new DateFilter<<#=entity.Name#>FilterContext,<#=entity.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
 <#}#>
 <#}#>
     }
 
-    public class  <#=_view.Name#>OrderContext : BaseOrderContext
+    public class  <#=entity.Name#>OrderContext : BaseOrderContext
     {
-		private <#=_view.Name#>Repository _repo;
-		private readonly <#=_view.Name#>QueryContext  _queryContext;
-		internal <#=_view.Name#>OrderContext(<#=_view.Name#>Repository repo, <#=_view.Name#>QueryContext context) { _repo = repo; _queryContext = context; }
+		private readonly <#=entity.Name#>QueryContext  _queryContext;
+		internal <#=entity.Name#>OrderContext(<#=entity.Name#>QueryContext context) { _queryContext = context; }
 
-<#foreach(var atd in _view.Attributes){#>
-        private OrderElement<<#=_view.Name#>OrderContext,<#=_view.Name#>QueryContext> <#=atd.FieldName#>;
-		public OrderElement<<#=_view.Name#>OrderContext,<#=_view.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new OrderElement<<#=_view.Name#>OrderContext,<#=_view.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
+<#foreach(var atd in entity.Attributes){#>
+        private OrderElement<<#=entity.Name#>OrderContext,<#=entity.Name#>QueryContext> <#=atd.FieldName#>;
+		public OrderElement<<#=entity.Name#>OrderContext,<#=entity.Name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new OrderElement<<#=entity.Name#>OrderContext,<#=entity.Name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
 <#}#>
     }
 }
