--- a/Genie/Templates/Infrastructure/ReadOnlyRepository.tt
+++ b/Genie/Templates/Infrastructure/ReadOnlyRepository.tt
@@ -33,9 +33,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         }
 
         
-        internal virtual IEnumerable<T> Get(string targetName, Queue<string> where, Queue<string> order, int? pageSize = null, int? page = null, int? limit = null, IDbTransaction transaction = null)
+        internal virtual IEnumerable<T> Get(string targetName, Queue<string> where, Queue<string> order, int? pageSize = null, int? page = null, int? limit = null, int? skip = null, int? take = null, IDbTransaction transaction = null)
         {
-            return Conn.Get<T>(targetName, where, order,  pageSize, page, limit, transaction).ToList();
+            return Conn.Get<T>(targetName, where, order,  pageSize, page, limit, skip, take, transaction).ToList();
         }
     }
 }
